--- a/templates/app.html
+++ b/templates/app.html
@@ -3,6 +3,72 @@
 {% block bodyblock %}
 
 <div class="container">
+
+    <br><br>
+    <h3 class="display-8">Smart Grid Application (Energy)</h3>
+    
+    <p>
+        this application provides an integrated simulation of distributed electrical energy generation
+        with response to demand in a SmartGrid system through quota allocation with a replicator dynamics
+        optimization algorithm..
+
+        <p>DOI: <a href="https://doi.org/10.1109/PEPQA59611.2023.10325776">10.1109/PEPQA59611.2023.10325776</a></p>
+        DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 20%
+
+
+    </p>
+    <img src="/static/images/PEPQA.PNG" class="image-fluid" width="600" alt="">
+
+    <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=tnZ4zONaqIk">SmartGrid App</a>
+
+    <br><br>
+    <h3 class="display-8"> ANJE Application (Legal)</h3>
+    
+    <p>
+        This is an NLP-based assistant that facilitates lawyers search for similar historical cases,
+        with a chatbot that can answer simple questions. It reuses pre-trained Large Language Models (LLM) (see
+        HuggingFace) and BERT (PoC version of App) with the possibility of extending pre-trained generative
+        transformers (GPT) to be applied in the Legal domain.
+
+        <p>DOI: <a href="https://doi.org/10.1145/3578741.3578793">10.1145/3578741.3578793</a></p>
+
+        DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 40%
+    </p>
+    <img src="/static/images/ANJE.PNG" class="image-fluid" width="600" alt="">
+
+    <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=JrEu_X4Pgtc">ANJE App</a>
+
+
+    <br><br>
+    <h3 class="display-8">BraTS Tumor Segmentation Application (Medical)</h3>
+    
+    <p>
+        This diagnostic-support app seeks to integrate into a hospital business logic of clinical cases.
+        In this case, a brain tumor segmentation model developed for the BraTS competition.
+
+        DOI: Pending
+        DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 50%
+
+    </p>
+    <img src="/static/images/BraTSAPP_1.PNG" class="image-fluid" width="600" alt="">
+
+    <a class="btn btn-outline-primary" href="https://ipolcore.ipol.im/demo/clientApp/demo.html?id=77777000461">BraTS App</a>
+
+    <br><br>
+    <h3 class="display-8">PethAPP Mouse Repiration Application (Medical)</h3>
+    
+    <p>
+         It is an application to support biologists analyze breathing measurements in mice. It allows
+            the detection of abnormal patterns in inspiration and expiration using an algorithm developed at the Borelli
+            Center..
+            <p>DOI: <a href="https://doi.org/10.3389/fphys.2023.1154328">10.3389/fphys.2023.1154328</a></p>
+
+            DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 70%
+    </p>
+    <img src="/static/images/pethapp2.PNG" class="image-fluid" width="600" alt="">
+
+    <a class="btn btn-outline-primary" href="/app/gender/">Peth App</a>
+
     <br><br>
     <h3 class="display-8">Face Recognition Application</h3>
     
@@ -14,6 +80,19 @@
     <img src="/static/images/002.PNG" class="image-fluid" width="600" alt="">
 
     <a class="btn btn-outline-primary" href="/app/gender/">Gender App</a>
+
+    <br><br>
+    <h3 class="display-8">Autobrillant Application (startup)</h3>
+    
+    <p>
+        startup that fights against water waste through dry car washing and price optimization 
+        according to maps and API of water availability in the area.
+
+        <p>API: <a href="https://hubeau.eaufrance.fr/page/api-qualite-eau-potable#console">External API consumed</a></p>
+    </p>
+    <img src="/static/images/autobrillant.PNG" class="image-fluid" width="400" alt="">
+
+    <a class="btn btn-outline-primary" href="https://autobrillant.fr/">Autobrillant App</a>
 
 </div>
 
