--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Face Recognition Web App</title>
+    <title>OVDSaaS Reproducible Apps</title>
     <link rel="icon" href="/static/images/icon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
             <!-- logo -->
             <a class="navbar-brand" href="/">
                 <img class="image-fluid" src="/static/images/logo.svg" alt="" width="75">
-                Face Recognition
+                OVDSaaS  Online Verifiable Data Science
             </a>
 
             <!-- items -->
@@ -26,6 +26,8 @@
                 <div class="navbar-nav">
                     <a class="nav-item nav-link" href="/">Home</a>
                     <a class="nav-item nav-link" href="/app/">App</a>
+                    <a class="nav-item nav-link" href="/calculator/">Rep Calculator</a>
+                    <a class="nav-item nav-link" href="/app/">DOIschain</a>
 
                 </div>
             </div>
