--- a/templates/index.html
+++ b/templates/index.html
@@ -4,21 +4,41 @@
 
 <div class="container">
     <br><br>
-    <h3 class="display-6"> Welcome to End to Face Recognition Web App Project</h3>
+    <h3 class="display-6"> Welcome to OVDSaaS End to end Online Reproducible Apps Project</h3>
         <br>
             <p>
-                This course explains you the end to end flow of Face Recognition. 
-                And this course can split into two parts.
+                VALUING REPRODUCIBLE RESEARCH AT THE SERVICE OF THE INDUSTRY Creating synergies between scientists and industry
+                
             </p>
-            <img src="/static/images/content/modules.svg" class="image-fluid" height="300" alt="">
+            <img src="/static/images/content/ovdsaas.svg" class="image-fluid" height="300" alt="">
             <p>
-                In 1st module we majorly deals with training machine leanring model for face recognition. Whereas in second module 
-                we focus our journey towards develop web app (API) and integrate our machine learning model.
-            </p>
-        <br>
+                
 
-        <h4>1. Training Face Recognition Model</h4>
-        <p>Training face recognition model contains 4 steps. Those are
+                This Documentation explains you the end to end flow Reproducible Scientific Apps Creation. 
+                And the process can split into two parts.
+
+                
+                In 1st module we majorly deals with Survey of business requirements of the target industry,  develop MLops model. 
+                Whereas in second module 
+                we focus our journey towards develop custom Online web app (API) and integrate our machine learning model reproducible results.
+            </p>
+            <img src="/static/images/team.jpg" class="image-fluid" width="400" alt="">
+        <br>
+        <h4>1. Creating synergies between scientists and industry</h4>
+        <p>relate the actors of the tailored application contains 4 steps. Those are
+        </p> 
+        <ol>
+            <li>Survey of business requirements of the target industry (business industril representative)</li>
+            <li>Development of scientific research around the identified problems (scientist, authors)</li>
+            <li>publication of results and reproducible artifacts with persistent identifiers, perennial DOIschain (publisher)</li>
+            <li>development of a custom reproducible App (OVDSaaS)</li>
+        
+        </ol>
+        <p>Below given is the training flow diagram and steps involved</p>
+        <img class="image-fluid" height="300" src="/static/images/content/modules.svg" alt="">
+
+        <h4>2. Training App Model</h4>
+        <p>Training ML model contains 4 steps. Those are
         </p> 
         <ol>
             <li>Data Gathering</li>
@@ -30,7 +50,7 @@
         <p>Below given is the training flow diagram and steps involved</p>
         <img class="image-fluid" height="300" src="/static/images/content/training_flow.svg" alt="">
 
-        <h4>2. Web Application</h4>
+        <h4>3. Online Application</h4>
         <p>After completion of Machine Learning module we will develop Flask based web application.
         </p> 
         <ol>
@@ -41,14 +61,14 @@
                     <li>Bootstrap - Styling (Frontend)</li>
                 </ul>
             </li>
-            <li>Interagte Machine Learning model</li>
-            <li>Deploy Web App in Heroku Cloud</li>
+            <li>Intergrate Machine Learning model</li>
+            <li>Deploy Web App in Cloud</li>
         </ol>
 
-        <h4>3. Deployment</h4>
-        <p>We push our code in Github and connect our in heroku
+        <h4>4. Deployment</h4>
+        <p>We push our code in Github and connect our in Cloud Platform
         </p> 
-        <img src="/static/images/content/deployment.svg" height="300" class="image-fluid" alt="">
+        <img src="/static/images/content/deployment.png" height="300" class="image-fluid" alt="">
 </div>
 
 
