--- a/templates/app.html
+++ b/templates/app.html
@@ -5,7 +5,7 @@
 <div class="container">
 
     <br><br>
-    <h3 class="display-8">Smart Grid Application (Energy)</h3>
+    <h3 class="display-8">Smart Grid Application ( Energy Sector - Simulator)</h3>
     
     <p>
         this application provides an integrated simulation of distributed electrical energy generation
@@ -22,7 +22,7 @@
     <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=tnZ4zONaqIk">SmartGrid App</a>
 
     <br><br>
-    <h3 class="display-8"> ANJE Application (Legal)</h3>
+    <h3 class="display-8"> ANJE Application ( Legal sector - NLP)</h3>
     
     <p>
         This is an NLP-based assistant that facilitates lawyers search for similar historical cases,
@@ -40,7 +40,7 @@
 
 
     <br><br>
-    <h3 class="display-8">BraTS Tumor Segmentation Application (Medical)</h3>
+    <h3 class="display-8">BraTS Tumor Segmentation Application (Medical Sector - computer vision)</h3>
     
     <p>
         This diagnostic-support app seeks to integrate into a hospital business logic of clinical cases.
@@ -55,7 +55,7 @@
     <a class="btn btn-outline-primary" href="https://ipolcore.ipol.im/demo/clientApp/demo.html?id=77777000461">BraTS App</a>
 
     <br><br>
-    <h3 class="display-8">PethAPP Mouse Repiration Application (Medical)</h3>
+    <h3 class="display-8">PethAPP Mouse Repiration Application (Medical sector - signal treatment)</h3>
     
     <p>
          It is an application to support biologists analyze breathing measurements in mice. It allows
@@ -70,7 +70,24 @@
     <a class="btn btn-outline-primary" href="/app/gender/">Peth App</a>
 
     <br><br>
-    <h3 class="display-8">Face Recognition Application</h3>
+
+    <br><br>
+    <h3 class="display-8">Scientific Replicable Online Apps Under development</h3>
+
+    <br><br>
+    <h3 class="display-8">LoanAPP (third party authorship)(Banking Sector - Machine Learning)</h3>
+    
+    <p>
+        : this application supports the decision to grant loans. It integrates FastAPI microservice
+         business logic with the credit score and default risk models..
+    </p>
+    <img src="/static/images/LoanAPP.PNG" class="image-fluid" width="600" alt="">
+
+    <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=YcCypo45anc">Loan App</a>
+
+    <br><br>
+    <br><br>
+    <h3 class="display-8">Face Recognition Application (third party authorship)(Retail Sector - Computer Vision)</h3>
     
     <p>
         Gender Classification: This app is driven by data and machine learning model.
@@ -82,6 +99,21 @@
     <a class="btn btn-outline-primary" href="/app/gender/">Gender App</a>
 
     <br><br>
+
+    <h3 class="display-8"> Cloud annotation application (third party authorship)(Aerospatial Sector - Computer Vision)</h3>
+    
+    <p>
+        The users can login into the platform
+        The users can upload images to the app, in a permanent storage associated to the user
+        Each user can interactively annotate images to tell what is a cloud and what is not, to get data to train
+        .
+    </p>
+    <img src="/static/images/cloud_annotation.PNG" class="image-fluid" width="600" alt="">
+
+    <a class="btn btn-outline-primary" href="https://marvelapp.com/prototype/2708g6cg/screen/74997540">Gender App</a>
+
+    <br><br>
+
     <h3 class="display-8">Autobrillant Application (startup)</h3>
     
     <p>
