--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
     <h3 class="display-6"> Welcome to OVDSaaS End to end Online Reproducible Apps Project</h3>
         <br>
             <p>
-                VALUING REPRODUCIBLE RESEARCH AT THE SERVICE OF THE INDUSTRY Creating synergies between scientists and industry
+                VALUING REPRODUCIBLE RESEARCH AT THE SERVICE OF THE INDUSTRY Creating synergies between scientists and industry, 
+                Solving cutting edge problems matching computational scientific research approach, editorial approach, available reproducibility technology approach and business approach
                 
             </p>
             <img src="/static/images/content/ovdsaas.svg" class="image-fluid" height="300" alt="">
@@ -23,6 +24,14 @@
                 we focus our journey towards develop custom Online web app (API) and integrate our machine learning model reproducible results.
             </p>
             <img src="/static/images/team.jpg" class="image-fluid" width="400" alt="">
+            <br><br>
+            Understand the problem, the business logic, the roles involved and segment it into microservices in BPML processes workflows
+            <br><br>
+        </p>
+        <img src="/static/images/content/BPML.svg" class="image-fluid" height="300" alt="">
+        <p>
+
+
         <br>
         <h4>1. Creating synergies between scientists and industry</h4>
         <p>relate the actors of the tailored application contains 4 steps. Those are
