--- a/templates/app.html
+++ b/templates/app.html
@@ -17,7 +17,7 @@
 
 
     </p>
-    <img src="/static/images/PEPQA.PNG" class="image-fluid" width="600" alt="">
+    <img src="/static/images/PEPQA.png" class="image-fluid" width="600" alt="">
 
     <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=tnZ4zONaqIk">SmartGrid App</a>
 
@@ -50,7 +50,7 @@
         DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 50%
 
     </p>
-    <img src="/static/images/BraTSAPP_1.PNG" class="image-fluid" width="600" alt="">
+    <img src="/static/images/BraTSAPP_1.png" class="image-fluid" width="600" alt="">
 
     <a class="btn btn-outline-primary" href="https://ipolcore.ipol.im/demo/clientApp/demo.html?id=77777000461">BraTS App</a>
 
@@ -65,7 +65,7 @@
 
             DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 70%
     </p>
-    <img src="/static/images/pethapp2.PNG" class="image-fluid" width="600" alt="">
+    <img src="/static/images/pethapp2.png" class="image-fluid" width="600" alt="">
 
     <a class="btn btn-outline-primary" href="/app/gender/">Peth App</a>
 
