--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -3,9 +3,19 @@
 {% block bodyblock %}
 <!-- 12 -->
 <div class="container">
+    <br><br>
+    <h3 class="display-6"> Reproducibility for verifiable, corroborable, trustworthy, credible, reliable, traceable, correctly rewarded scientific research</h3>
+        <br>
+            <p>
+                
+
+The following calculator is a simple tool to quantitatively have the percentage of reproducibility that a developed Application achieves
+                
+            </p>
+
     <div class="row">
         <div class="col">
-            <title>Tabla con suma de porcentajes</title>
+            <title>Applicaction Reproducibility Checklist</title>
             <style>
             table {
                 border-collapse: collapse;
