--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
         <ol>
             <li>Develop Web App with
                 <ul>
-                    <li>Flask - Web Server Gateway Interphase (Backend)</li>
+                    <li>Flask, FastAPI - Web Server Gateway Interphase (Backend)</li>
                     <li>HTML - Layout (Frontend)</li>
                     <li>Bootstrap - Styling (Frontend)</li>
                 </ul>
@@ -78,6 +78,14 @@
         <p>We push our code in Github and connect our in Cloud Platform
         </p> 
         <img src="/static/images/content/deployment.png" height="300" class="image-fluid" alt="">
+
+        <br><br>
+        <h4>5. Complete OVDSaaS infrastructure</h4>
+        <p>The application becomes part of the OVDSaaS reproducibility-oriented ecosystem
+        </p> 
+        <img src="/static/images/content/ovdsaasblocks.png" height="500" class="image-fluid" alt="">
+        <br><br>
+        <br><br>
 </div>
 
 
