--- a/templates/app.html
+++ b/templates/app.html
@@ -126,6 +126,20 @@
 
     <a class="btn btn-outline-primary" href="https://autobrillant.fr/">Autobrillant App</a>
 
+    <br><br>
+
+    <h3 class="display-8"> TradingAPP(Financial Sector - Signal Processing)</h3>
+    
+    <p>
+        The users need follow currency market
+        
+    </p>
+    <img src="/static/images/trading.PNG" class="image-fluid" width="600" alt="">
+
+    <a class="btn btn-outline-primary" href="/app/trading/">Trading App</a>
+
+    <br><br>
+
 </div>
 
 {% endblock %}
