--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse">
                 <div class="navbar-nav">
                     <a class="nav-item nav-link" href="/">Home</a>
-                    <a class="nav-item nav-link" href="/app/">App</a>
+                    <a class="nav-item nav-link" href="/app/">Apps</a>
                     <a class="nav-item nav-link" href="/calculator/">Rep Calculator</a>
                     <a class="nav-item nav-link" href="/app/">DOIschain</a>
 
