--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                 
 
                 This Documentation explains you the end to end flow Reproducible Scientific Apps Creation. 
-                And the process can split into two parts.
+                And the process can split into two parts..
 
                 
                 In 1st module we majorly deals with Survey of business requirements of the target industry,  develop MLops model. 
