--- a/templates/app.html
+++ b/templates/app.html
@@ -83,7 +83,8 @@
     </p>
     <img src="/static/images/LoanAPP.PNG" class="image-fluid" width="600" alt="">
 
-    <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=YcCypo45anc">Loan App</a>
+    <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=YcCypo45anc">Loan App video</a>
+    <a class="btn btn-outline-primary" href="http://localhost:8501/">Loan App</a>
 
     <br><br>
     <br><br>
@@ -114,13 +115,15 @@
 
     <br><br>
 
-    <h3 class="display-8">Autobrillant Application (startup)</h3>
+    <h3 class="display-8">Autobrillant Application (startup - Recommender )</h3>
     
     <p>
         startup that fights against water waste through dry car washing and price optimization 
-        according to maps and API of water availability in the area.
+        according to maps and API of water availability in the area. We obtain the cost of water that we are going to save through our dry cleaning service, it is optimized 
+        and a recommender is made based on machine learning and the open data
 
         <p>API: <a href="https://hubeau.eaufrance.fr/page/api-qualite-eau-potable#console">External API consumed</a></p>
+        <p>water price calculator: <a href="https://autobrillant.fr/appagua/prix_eau_wms.htm">Service map</a></p>
     </p>
     <img src="/static/images/autobrillant.PNG" class="image-fluid" width="400" alt="">
 
