--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                     <a class="nav-item nav-link" href="/">Home</a>
                     <a class="nav-item nav-link" href="/app/">Apps</a>
                     <a class="nav-item nav-link" href="/calculator/">Rep Calculator</a>
-                    <a class="nav-item nav-link" href="/app/">DOIschain</a>
+                    <a class="nav-item nav-link" href="/DOIschain/">DOIschain</a>
 
                 </div>
             </div>
