--- a/templates/trading.html
+++ b/templates/trading.html
@@ -5,9 +5,9 @@
 <!-- 12 -->
 <div class="container">
         <br><br>
-        <h3 class="display-6"> Trading APP</h3>
+        <h3 class="display-6"> Trading APP - makes predictions through deep learning of exchange currency strategy</h3>
             <br>
-    <h1>Market Accumulated</h1>
+    <h1>Market Accumulated  USD / EUR</h1>
     <img src="{{ plot_file }}" alt="Market Accumulated Plot">
 </div>
 
