--- a/templates/app.html
+++ b/templates/app.html
@@ -13,7 +13,8 @@
         optimization algorithm..
 
         <p>DOI: <a href="https://doi.org/10.1109/PEPQA59611.2023.10325776">10.1109/PEPQA59611.2023.10325776</a></p>
-        DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 20%
+        DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 20%  Badge: No 
+      
 
 
     </p>
@@ -21,7 +22,7 @@
 
     <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=tnZ4zONaqIk">SmartGrid App</a>
 
-    <br><br>
+    <br><br><br><br><br><br>
     <h3 class="display-8"> ANJE Application ( Legal sector - NLP)</h3>
     
     <p>
@@ -32,14 +33,16 @@
 
         <p>DOI: <a href="https://doi.org/10.1145/3578741.3578793">10.1145/3578741.3578793</a></p>
 
-        DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 40%
+        DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 40% Badge: Bronze 
+        <img src="/static/images/bronze.PNG" class="image-fluid" width="20" alt="">
     </p>
     <img src="/static/images/ANJE.PNG" class="image-fluid" width="600" alt="">
 
-    <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=JrEu_X4Pgtc">ANJE App</a>
+    <a class="btn btn-outline-primary" href="http://localhost:8053/">ANJE App</a>
+    <a class="btn btn-outline-primary" href="http://localhost:8054/">ANJE chat App</a>
 
 
-    <br><br>
+    <br><br><br><br><br><br>
     <h3 class="display-8">BraTS Tumor Segmentation Application (Medical Sector - computer vision)</h3>
     
     <p>
@@ -47,14 +50,21 @@
         In this case, a brain tumor segmentation model developed for the BraTS competition.
 
         DOI: Pending
-        DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 50%
+        <p>DOIchain: <a href="https://white-historic-chinchilla-599.mypinata.cloud/ipfs/QmW3CLyx7tcw3uDCXjQL5xAJDyCmT3B4GPnNpZ9rjHoFhg">PID</a></p>
+        <p>Publication: <a href="https://white-historic-chinchilla-599.mypinata.cloud/ipfs/Qmezmd76kUg38qHmfb3xWXJyvJRGhmKJMKeGLfTMFjoPdj">PID</a></p>
+        <p>DataMedChain: <a href="https://white-historic-chinchilla-599.mypinata.cloud/ipfs/QmSgtne642z5FTj71qHCeFoqUJPim3TxxRpBHcLV9JcaWV/">IPFS-data</a></p>
+        <p>MLcube: <a href="https://white-historic-chinchilla-599.mypinata.cloud/ipfs/QmY8V23yiqABgrhnNFfwmT9WjAvjdnhiQ64HgFreoxiWFf/">IPFS-MLcube</a></p>
+        <p>Code: <a href="https://white-historic-chinchilla-599.mypinata.cloud/ipfs/QmcEd9iZXx781RfeHKxpWcLQfiomMXukjEFpQoW6oKzo8B/">IPFS-code</a></p>
+
+         Reproducibility Percentage: 90%  Badge: Gold
+         <img src="/static/images/gold.PNG" class="image-fluid" width="20" alt=""> 
 
     </p>
     <img src="/static/images/BraTSAPP_1.png" class="image-fluid" width="600" alt="">
 
-    <a class="btn btn-outline-primary" href="https://ipolcore.ipol.im/demo/clientApp/demo.html?id=77777000461">BraTS App</a>
+    <a class="btn btn-outline-primary" href="http://localhost:8501/">BraTS App</a>
 
-    <br><br>
+    <br><br><br><br><br><br>
     <h3 class="display-8">PethAPP Mouse Repiration Application (Medical sector - signal treatment)</h3>
     
     <p>
@@ -63,13 +73,14 @@
             Center..
             <p>DOI: <a href="https://doi.org/10.3389/fphys.2023.1154328">10.3389/fphys.2023.1154328</a></p>
 
-            DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 70%
+            DOIschain: xxxxxxxxxxxxxxxx Reproducibility Percentage: 70% Badge: Sivler
+            <img src="/static/images/silver.PNG" class="image-fluid" width="20" alt=""> 
     </p>
     <img src="/static/images/pethapp2.png" class="image-fluid" width="600" alt="">
 
     <a class="btn btn-outline-primary" href="/app/gender/">Peth App</a>
 
-    <br><br>
+    <br><br><br><br><br><br>
 
     <br><br>
     <h3 class="display-8">Scientific Replicable Online Apps Under development</h3>
@@ -84,7 +95,7 @@
     <img src="/static/images/LoanAPP.PNG" class="image-fluid" width="600" alt="">
 
     <a class="btn btn-outline-primary" href="https://www.youtube.com/watch?v=YcCypo45anc">Loan App video</a>
-    <a class="btn btn-outline-primary" href="http://localhost:8501/">Loan App</a>
+    <a class="btn btn-outline-primary" href="http://localhost:8502/">Loan App</a>
 
     <br><br>
     <br><br>
@@ -101,7 +112,7 @@
 
     <br><br>
 
-    <h3 class="display-8"> Cloud annotation application (third party authorship)(Aerospatial Sector - Computer Vision)</h3>
+    <h3 class="display-8">CM-IPOL APP Cloud annotation application (third party authorship)(Aerospatial Sector - Computer Vision)</h3>
     
     <p>
         The users can login into the platform
@@ -112,8 +123,25 @@
     <img src="/static/images/cloud_annotation.PNG" class="image-fluid" width="600" alt="">
 
     <a class="btn btn-outline-primary" href="https://marvelapp.com/prototype/2708g6cg/screen/74997540">Gender App</a>
+    <a class="btn btn-outline-primary" href="http://localhost:8504/">CM-IPOL App</a>
 
     <br><br>
+
+    <h3 class="display-8">Class Room assistance application (third party authorship)(Education Sector - Computer Vision)</h3>
+    
+    <p>
+        The users can login into the platform
+        The app detect faces and record students assistance
+        
+        .
+    </p>
+    <img src="/static/images/assistance_app.PNG" class="image-fluid" width="600" alt="">
+
+
+    <a class="btn btn-outline-primary" href="http://localhost:8505/">Assistance-App</a>
+
+    <br><br>
+
 
     <h3 class="display-8">Autobrillant Application (startup - Recommender )</h3>
     
