mejoras  ovdsaas nuevamente

--- a/templates/app.html
+++ b/templates/app.html
@@ -50,8 +50,8 @@
         In this case, a brain tumor segmentation model developed for the BraTS competition.
 
         DOI: Pending
-        <p>DOIchain: <a href="https://white-historic-chinchilla-599.mypinata.cloud/ipfs/QmW3CLyx7tcw3uDCXjQL5xAJDyCmT3B4GPnNpZ9rjHoFhg">PID</a></p>
-        <p>Publication: <a href="https://white-historic-chinchilla-599.mypinata.cloud/ipfs/Qmezmd76kUg38qHmfb3xWXJyvJRGhmKJMKeGLfTMFjoPdj">PID</a></p>
+        <p>DOIchain: <a href="https://white-historic-chinchilla-599.mypinata.cloud/ipfs/QmUBP3JvR5ombVPPQcBQZkBBPY9GzRtEgJBJZyQCx1RmuD">PID</a></p>
+        <p>Publication: <a href="https://white-historic-chinchilla-599.mypinata.cloud/ipfs/Qmezmd76kUg38qHmfb3xWXJyvJRGhmKJMKeGLfTMFjoPdj">IPFS-Publication</a></p>
         <p>DataMedChain: <a href="https://white-historic-chinchilla-599.mypinata.cloud/ipfs/QmSgtne642z5FTj71qHCeFoqUJPim3TxxRpBHcLV9JcaWV/">IPFS-data</a></p>
         <p>MLcube: <a href="https://white-historic-chinchilla-599.mypinata.cloud/ipfs/QmY8V23yiqABgrhnNFfwmT9WjAvjdnhiQ64HgFreoxiWFf/">IPFS-MLcube</a></p>
         <p>Code: <a href="https://white-historic-chinchilla-599.mypinata.cloud/ipfs/QmcEd9iZXx781RfeHKxpWcLQfiomMXukjEFpQoW6oKzo8B/">IPFS-code</a></p>
@@ -123,7 +123,7 @@
     <img src="/static/images/cloud_annotation.PNG" class="image-fluid" width="600" alt="">
 
     <a class="btn btn-outline-primary" href="https://marvelapp.com/prototype/2708g6cg/screen/74997540">Gender App</a>
-    <a class="btn btn-outline-primary" href="http://localhost:8504/">CM-IPOL App</a>
+    <a class="btn btn-outline-primary" href="http://localhost:8506/">CM-IPOL App</a>
 
     <br><br>
 
