--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
                     <a class="nav-item nav-link" href="/app/">Apps</a>
                     <a class="nav-item nav-link" href="/calculator/">Rep Calculator</a>
                     <a class="nav-item nav-link" href="/DOIschain/">DOIschain</a>
+                    <a class="nav-item nav-link" href="/rif/">RIF(Research Impact)</a>
 
                 </div>
             </div>
